# NornsCad

./: CMakeLists.txt  README.md  ReadMe.md  env.bat  genproj.bat  msvc.bat  table.html
OcctColors/: OcctColors.cxx
res/qml/: BoolToolsBar.qml  ColorPicker.html  ColorSelector.qml  CommandLine.qml  ToolDraw.qml  html5kellycolorpicker.js  html5kellycolorpicker.min.js  main.qml  ntc.js
src/: AndroidQt.cxx  AndroidQt.h  AndroidQt.qrc  AndroidQt_TouchParameters.cxx  AndroidQt_TouchParameters.h  Main.cxx  NOcafFunction_BoxDriver.cxx  NOcafFunction_BoxDriver.h  NOcafFunction_CutDriver.cxx  NOcafFunction_CutDriver.h  NOcafFunction_CylDriver.cxx  NOcafFunction_CylDriver.h  NOcaf_Application.cxx  NOcaf_Application.h  Ntcl.h  QDirectStream.cxx  QDirectStream.h  ViewProjPoint.cxx  ViewProjPoint.h  qtquickcontrols2.conf
tcl/: tcletst.tcl
